<resources>
    <string name="app_name">Avengers</string>
    <string name="invalid_mobile">Enter valied mobile number</string>
    <string name="topText">You should pay 10% as a advance payment to confirm the hire</string>
    <string name="total">Total</string>
    <string name="advance">Advance</string>
    <string name="payMethods">Select Payment Methods</string>
    <string name="method1">pay with credit or debit</string>
    <string name="method2">Bank Transfer</string>
    <string name="holder">Account Holder</string>
    <string name="type">Account Type</string>
    <string name="accNo">Account No</string>
    <string name="routing">Routing No</string>
    <string name="bottom_text">Your payment information is stored securley</string>
    <string name="routNo">routing no</string>
    <string name="accountNo">account no</string>
    <string name="save">Save</string>
    <string name="mason">Mason</string>
    <string name="cctv">CCTV</string>
    <string name="painter">Painter</string>
    <string name="carpenter">Carpenter</string>
    <string name="title">Add A New Worker</string>
    <string name="name">Worker Name</string>
    <string name="categ">Category</string>
    <string name="salary">Salary</string>
    <string name="Add">Add</string>
    <string name="text1">Text1</string>
    <string name="text2">Text2</string>
    <string name="cusName">cusName</string>
    <string name="Customer">Customer</string>
    <string name="Worker">Worker</string>
    <string name="location">Location</string>
    <string name="Date">Date</string>
    <string name="dur">Completion Duration</string>
    <string name="Balance">Balance</string>
    <string name="Edit">Edit</string>
    <string name="Con">Contract</string>
    <string name="DisDate">Date</string>
    <string name="contract">contract</string>
    <string name="bottmText">Work byte will resolve the problem within one week</string>
    <string name="confirm">Confirm cancal</string>
</resources>