<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".disputes">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="32dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="346dp"
        android:layout_height="234dp"
        android:layout_marginTop="108dp"
        android:background="@drawable/box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/include" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="341dp"
        android:layout_height="2dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="52dp"
        android:background="#090909"
        android:src="@drawable/ic_baseline_horizontal_rule_24"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="84dp"
        android:layout_height="22dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="20dp"
        android:text="@string/Con"
        android:textColor="#090909"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/hire"
        android:layout_width="131dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:text="@string/contract"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="51dp"
        android:layout_height="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="52dp"
        android:text="@string/DisDate"
        android:textColor="#090909"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="330dp"
        android:layout_height="44dp"
        android:layout_marginTop="44dp"
        android:text="@string/bottmText"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/delete"
        android:layout_width="195dp"
        android:layout_height="55dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="112dp"
        android:backgroundTint="#286DD5"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        />


    <TextView
        android:id="@+id/date"
        android:layout_width="102dp"
        android:layout_height="43dp"
        android:layout_marginStart="68dp"
        android:layout_marginBottom="108dp"
        android:text="TextView"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/hire" />


</androidx.constraintlayout.widget.ConstraintLayout>