<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg3"
    tools:context=".MainActivity">


    <include
        android:id="@+id/include3"
        layout="@layout/toolbar"
        android:background="@drawable/buttonshape1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/bank_holder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="52dp"
        android:text="@string/holder"
        android:textColor="#0B0A0A"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bank_topText" />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#0B0B0B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.906"
        app:layout_constraintStart_toEndOf="@+id/bank_nme"
        app:layout_constraintTop_toBottomOf="@+id/bank_topText"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/bak_holder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="52dp"
        android:text="@string/holder"
        android:textColor="#0B0A0A"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bank_topText" />


    <EditText
        android:id="@+id/holder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="36dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#0B0B0B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bank_topText"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/bank_accNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="56dp"
        android:text="@string/accNo"
        android:textColor="#101010"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bank_nme" />

    <ImageView
        android:id="@+id/bank_img1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="72dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/include3"
        app:srcCompat="@drawable/pay_method2new" />

    <TextView
        android:id="@+id/bank_topText"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="52dp"
        android:text="@string/topText"
        android:textColor="#434445"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/include3" />

    <TextView
        android:id="@+id/bank_routing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:text="@string/routing"
        android:textColor="#0B0B0B"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bank_accNo" />

    <TextView
        android:id="@+id/bank_bottonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:text="@string/bottom_text"
        android:textColor="#3C3C3E"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/routNo" />

    <ImageView
        android:id="@+id/bank_img2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_baseline_lock_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bank_routing" />

    <ImageView
        android:id="@+id/bank_img3"
        android:layout_width="400dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bank_bottonText"
        app:srcCompat="@drawable/my_check" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="46dp"
        android:src="@drawable/ic_baseline_arrow_downward_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bank_img3" />

    <ImageView
        android:id="@+id/painter_img"
        android:layout_width="37dp"
        android:layout_height="51dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="172dp"
        android:src="@drawable/ic_baseline_arrow_downward_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bank_img3" />

    <TextView
        android:id="@+id/rout_no"
        android:layout_width="109dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="2dp"
        android:text="@string/routNo"
        android:textColor="#090909"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/acc_no"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <EditText
        android:id="@+id/accNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/routNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accNo"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/acc_no"
        android:layout_width="115dp"
        android:layout_height="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="120dp"
        android:text="@string/accountNo"
        android:textColor="#0E0E0E"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/painter_img" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="153dp"
        android:layout_height="41dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/buttonshape1"
        android:text="@string/save"
        android:textColor="#0081D1"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/acc_no" />

    <TextView
        android:id="@+id/bank_nme"
        android:layout_width="113dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="44dp"
        android:text="Bank Name"
        android:textColor="#070707"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bank_holder" />


</androidx.constraintlayout.widget.ConstraintLayout>