<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg3"
    tools:context=".MainActivity">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar"
        tools:layout_editor_absoluteX="-106dp"
        tools:layout_editor_absoluteY="-362dp" />


    <TextView
        android:id="@+id/paymentMethod_total"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="516dp"
        android:text="@string/total"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/paymentMethod_advance"
        android:layout_width="95dp"
        android:layout_height="31dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:text="@string/advance"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paymentMethod_total" />

    <TextView
        android:id="@+id/paymentMethod_payMethods"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_marginBottom="340dp"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/payMethods"
        android:textColor="#100F0F"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/paymentMethod_topText"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_marginBottom="28dp"
        android:gravity="center"
        android:text="@string/topText"
        android:textColor="#020825"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/paymentMethod_total"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/pay_img1"
        android:layout_width="201dp"
        android:layout_height="76dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paymentMethod_payMethods"
        app:srcCompat="@drawable/pay_method1" />

    <Button
        android:id="@+id/payment_btn1"
        android:layout_width="174dp"
        android:layout_height="56dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#286DD5"
        android:text="Pay with credit or debit"
        app:layout_constraintEnd_toEndOf="@+id/include"
        app:layout_constraintTop_toBottomOf="@+id/paymentMethod_payMethods" />

    <ImageView
        android:id="@+id/pay_img2"
        android:layout_width="188dp"
        android:layout_height="79dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pay_img1"
        app:srcCompat="@drawable/bank2" />

    <Button
        android:id="@+id/payment_btn2"
        android:layout_width="178dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="28dp"
        android:backgroundTint="#286DD5"
        android:text="Bank Transfer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payment_btn1" />

    <TextView
        android:id="@+id/tx1"
        android:layout_width="104dp"
        android:layout_height="26dp"
        android:layout_marginTop="28dp"
        android:text="TextView"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toEndOf="@+id/paymentMethod_total"
        app:layout_constraintTop_toBottomOf="@+id/paymentMethod_topText" />

    <TextView
        android:id="@+id/tx2"
        android:layout_width="115dp"
        android:layout_height="25dp"
        android:layout_marginBottom="64dp"
        android:text="TextView"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/paymentMethod_payMethods"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toEndOf="@+id/paymentMethod_advance" />

</androidx.constraintlayout.widget.ConstraintLayout>